# CaroloCup

./: Driver_2015-02-05 14:00:11.profiling.csv  lanedetector_2015-02-05 14:00:04.profiling.csv  proxy_2015-02-05 13:59:57.profiling.csv
2015-CaroloCup/dataGen/: README.txt  msv.odvd
2015-CaroloCup/sources/OpenDaVINCI-msv/: .gitignore
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/VCR/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/csvexporter/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/driver/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/lanedetector/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/logger/: CMakeLists.txt  CMakeLists.txt~
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/proxy/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/proxy-STM32F4/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/apps/2015/proxy-meili/: CMakeLists.txt
2015-CaroloCup/sources/OpenDaVINCI-msv/supercomponent/: configuration
2015-CaroloCup/sources/dataStruct/: msv.odvd  msv.odvd~
2015-CaroloCup/sources/dataStruct/libmsv/: CMakeLists.txt
2015-CaroloCup/sources/dataStruct/libmsv/include/: GeneratedHeaders_msv.h
2015-CaroloCup/sources/dataStruct/libmsv/testsuites/: msv_LogMessagaDataTestSuite.h  msv_LogMessageDataTestSuite.h
2015-CaroloCup/sources/scripts/: start.sh
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/: CMakeLists.txt  Data.odvd
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/_buildtools/: FindRequiredLibraries.cmake
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/apps/VCR/: CMakeLists.txt
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/examples/example1/: CMakeLists.txt
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/examples/example2/: CMakeLists.txt
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/examples/example4/: CMakeLists.txt
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/hesperia/camgen/: CMakeLists.txt
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/libopendavinci/: CMakeLists.txt
2015-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/supercomponent/: CMakeLists.txt
TemplateGenerator/: generateCode.sh
TemplateGenerator/component/: CMakeLists.txt
TemplateGenerator/component/apps/: MainModule.cpp
TemplateGenerator/component/include/: Component.h
TemplateGenerator/component/src/: Component.cpp
TemplateGenerator/component/testsuites/: ComponentTestSuite.h
(+38 files in other folders)
